# rclabsAPI

./: .env.example  .gitignore  ACTION_PLAN.md  CMakeLists.txt  CRITICAL_FIXES_SUMMARY.md  DATABASE_SETUP.md  DEVELOPMENT.md  DEVELOPMENT_TASK_LIST.md  Dockerfile  Dockerfile-java  Dockerfile.render  ENHANCED_LOGGING_README.md  EXCEPTION_HANDLING_GUIDE.md  EXCEPTION_HANDLING_IMPLEMENTATION_SUMMARY.md  INPUT_VALIDATION_README.md  Makefile  README.md  RENDER_DEPLOYMENT.md  ROADMAP.md  build_exception_test.sh  config.json  demo_log_aggregation.sh  demo_request_validator_simple  docker-compose-java.yml  docker-compose.yml  redis-entrypoint.sh  redis.conf  redis_password.txt  render.yaml  simple_exception_demo  simple_exception_demo.cpp  simple_logging_test.cpp  test-oracle-setup.sh  test_async_logging.cpp  test_core_logger  test_enhanced_logging.cpp  test_etl_exceptions.cpp  test_exception_handling.cpp  test_exception_system  test_exception_system.cpp  (+6 more)
.github/: README.md  copilot-instructions.md
.github/workflows/: benchmarks.yml  ci-cd.yml  integration-tests.yml  release.yml  security.yml
config/: config.json  config.render.json  feature_flags.json
demos/: demo_exception_mapper_integration.cpp  demo_lock_utils.cpp  demo_log_file_manager.cpp  demo_request_validator.cpp  hana_exception_demo.cpp  main_integration_example.cpp  security_demo.cpp
deployment/: README.md  deploy.sh  deployment_checklist.md  local-deploy.sh  rollback.sh
docs/: additional_security_improvements.md  configuration_guide.md  lock_ordering_guide.md  migration_guide.md  performance_and_build_improvements.md  security_improvements.md
docs/api/: overview.md
docs/architecture/: component_relationships.md  system_architecture.md
helm/etlplus-backend/: Chart.yaml  README.md  values.yaml
include/: auth_manager.hpp  cache_manager.hpp  component_logger.hpp  config_manager.hpp  connection_pool.hpp  connection_pool_manager.hpp  core_logger.hpp  data_transformer.hpp  database_connection_pool.hpp  database_manager.hpp  database_schema.hpp  error_codes.hpp  etl_exceptions.hpp  etl_job_manager.hpp  etl_job_models.hpp  etl_job_repository.hpp  exception_handler.hpp  exception_mapper.hpp  exceptions.hpp  feature_flags.hpp  hana_exception_handling.hpp  hana_utils.hpp  http_server.hpp  input_validator.hpp  job_monitor_service.hpp  job_monitor_service_recovery.hpp  job_monitoring_models.hpp  jwt_key_manager.hpp  lock_utils.hpp  log_aggregation_config.hpp  log_aggregator.hpp  log_file_manager.hpp  log_handler.hpp  logger.hpp  message_broadcaster.hpp  notification_service.hpp  notification_service_recovery.hpp  performance_monitor.hpp  pooled_session.hpp  rate_limiter.hpp  (+22 more)
k8s/: deployment.yaml
monitoring/: monitor.sh
oracle-init/: 01-setup-etlplus.sh  healthcheck.sh
scripts/: basic_integration_test.cpp  build_exception_test.sh  build_integration_tests.sh  build_performance_integration_test.sh  component_logger_examples.cpp  create_github_issues.sh  demo_exception_features.cpp  demo_exception_mapper_integration.cpp  demo_lock_utils.cpp  demo_log_aggregation.sh  demo_log_file_manager.cpp  demo_request_validator.cpp  demo_request_validator_simple.cpp  demo_response_builder_simple.cpp  hana_exception_demo.cpp  init.sql  load_test_advanced.cpp  main_integration_example.cpp  security_demo.cpp  simple_integration_test.cpp  test_cache_warmup.cpp  test_component_logger_simple.cpp  test_component_logger_template.cpp  test_concurrency_benchmark.cpp  test_concurrent_request_handling.cpp  test_config_management.cpp  test_config_management_demo.cpp  test_config_simple.cpp  test_connection_pool_enhancements.cpp  test_connection_pool_manager.cpp  test_connection_pool_manager_simple.cpp  test_core_logger.cpp  test_core_logger_simple.cpp  test_db_connection_pool_load.sh  test_enhanced_request_processing.cpp  test_enhanced_request_processing_simple  test_enhanced_request_processing_simple.cpp  test_enhanced_rest_endpoints.cpp  test_enhanced_rest_endpoints_simple.cpp  test_error_code_consolidation.cpp  (+50 more)
scripts/migration/: README.md  analyze_migration.sh  install_compatibility.sh  migrate.sh  migrate_code.sh  migrate_config.sh  migration_analysis_20250908_190039.txt  migration_analysis_20250908_190053.txt  validate_migration.sh
src/: auth_manager.cpp  cache_manager.cpp  component_logger.cpp  config_manager.cpp  connection_pool.cpp  connection_pool_manager.cpp  core_logger.cpp  data_transformer.cpp  database_connection_pool.cpp  database_manager.cpp  database_schema.cpp  error_codes.cpp  etl_exceptions.cpp  etl_job_manager.cpp  etl_job_repository.cpp  exception_handler.cpp  exception_mapper.cpp  exceptions.cpp  feature_flags.cpp  http_server.cpp  input_validator.cpp  job_monitor_service.cpp  job_monitoring_models.cpp  jwt_key_manager.cpp  lock_utils.cpp  log_aggregation_config.cpp  log_aggregator.cpp  log_file_manager.cpp  log_handler.cpp  logger.cpp  main.cpp  main_integrated.cpp  message_broadcaster.cpp  notification_service.cpp  performance_monitor.cpp  pooled_session.cpp  rate_limiter.cpp  redis_cache.cpp  request_handler.cpp  request_handler_old.cpp  (+15 more)
tests/: concurrency_benchmark.cpp
tests/performance/: CMakeLists.txt  README.md  connection_pool_benchmark.cpp  load_test_advanced.cpp  load_test_benchmark.cpp  logger_benchmark.cpp  memory_benchmark.cpp  performance_benchmark.hpp  performance_test_runner.cpp  test_concurrency_benchmark.cpp  test_performance_monitoring_simple.cpp  websocket_benchmark.cpp
tests/unit/: test_component_logger_template.cpp  test_concurrent_request_handling.cpp  test_config_management.cpp  test_config_simple.cpp  test_enhanced_request_processing.cpp  test_enhanced_request_processing_simple.cpp  test_enhanced_rest_endpoints.cpp  test_error_code_consolidation.cpp  test_etl_exceptions.cpp  test_exception_mapper.cpp  test_http_server_connection_pooling.cpp  test_integration.cpp  test_job_monitoring_models.cpp  test_jwt_auth.cpp  test_lock_utils.cpp  test_log_handler.cpp  test_log_streaming_demo.cpp  test_notification_service.cpp  test_notification_service_error_handling.cpp  test_rate_limiter.cpp  (+14 more)
(+14 files in other folders)
